manifests/juice-shop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
spec:
  selector:
    app: juice-shop
  ports:
    - port: 80
      targetPort: 3000
